2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	CsvParser: Make this an actual parser, with a sane API.

	* glom/dialog_import_csv.[h|cc]:
	* glom/dialog_import_csv_progress.[h|cc]: Move into glom/import_csv/
	* glom/import_csv/: Added file_encodings.[h|cc], moving the encodings 
	list into it. This is similar to mode_design/iso_codes.[h|cc].
	* glom/import_csv.[h|cc]: Rename to glom/import_csv/csv_parser.[h|cc] 
	to match the class name.
	Move actual parsing (and the vector of row/column data) into 
	CsvParser, leaving the dialogs to just respond to signals and get 
	data via get methods.

	However, this breaks the import tests, because they add data to 
	the parser directly using m_raw. They must be changed to read actual 
	files, or maybe we could add some intermediate level of API that they 
	could test.

2009-09-18  Murray Cumming  <murrayc@murrayc-desktop>

	CsvParser: Made some API private.

	* glom/dialog_import_csv.[h|cc]: get_field_for_column(): Return a 
	sharedptr<const>, not a silly const sharedptr<>&.
	* glom/dialog_import_csv_progress.cc:
	* glom/import_csv.[h|cc]: add get_state() and get_rows_count(). Make 
	some API private to make it clearer what needs to be done to make 
	this a real self-contained class.

2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	CSV Import: Minor code style changes.

	* glom/dialog_import_csv.cc:
	* glom/dialog_import_csv_progress.cc:
	* glom/import_csv.[h]cc]: Prefix the state enum with STATE_. 
	Use 0 instead of NULL because this is C++. Remove some debug output.
	Make signal type and variable names consistent with other code.
	* tests/import/test_signals.cc: Add a last std::endl.

2009-09-18  Murray Cumming  <murrayc@murrayc.com>

	Tests: Stop using valgrind by default.

	* Makefile_tests.am: Do not run all tests under valgrind. valgrind is 
	for humans to read, and make check has no way to know if the result is 
	appopriate or not. Run things under valgrind when you want to.
